src/test/resources/typeSystemTestModels/invalid/expressions/PrimaryAccess.java
package typeSystemTestModels.invalid.expressions;

public class PrimaryAccess {

  int a = b;

}
